[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.18",
]

[project]
name = "comfy-api-nodes"
description = "bla bla"
readme = "README.md"
keywords = [
  "api",
  "comfyui",
]
license = "GPL-3.0-only"
authors = [
  { name = "Alexander Piskun", email = "bigcat88@icloud.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
]
dynamic = [
  "version",
]
dependencies = [
  "comfy-core>=0.3.62,<0.4.0",
]
[tool.hatch.version]
path = "comfy_api_nodes/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/comfy_api_nodes",
  "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["comfy_api_nodes"]
